[package]
name = "geyser-plugin-nats"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
dashmap = "5.3.4"
log = "0.4.17"
nats = "0.18"
serde = "1.0.137"
serde_bytes = "0.11.6"
serde_json = "1.0.81"
solana-geyser-plugin-interface = "=1.13.2"
solana-logger = "=1.13.2"
solana-sdk = "=1.13.2"

[dev-dependencies]
libc = "0.2.134"